created login page and imported db

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -40,9 +40,13 @@
                   <option value="Watt">Watt Hall</option>
                   <option value="Wein">Wein Hall</option>
                   <option value="Woodbridge">Woodbridge Hall</option>
+                </select><br/>
       <input type="submit" value="Sign Up"/>
     </form>
     Already Have An Account?
-    <button type="button">Log In!</button>
+    <form method="GET" action="http://chalice.cloudapp.net:8111/login/">
+    <input type="submit" value="Log In"/>
+    </form>
+    <a href="http://chalice.cloudapp.net:81111/login.html">Log In</a>
   </body>
 </html>
