--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -1,1 +1,11 @@
-hello, I am another file!
+<html>
+  <h1>Groupr</h1>
+  <p> Groupr is the best way to create and join Study Groups!</p>
+  <h2>Login</h2>
+  <p>{{error}}</p>
+  <form method="GET" action="http://chalice.cloudapp.net:8111/groups/">
+    Email: <input type="text" name="email"/><br/>
+    Username: <input type="text" name="email"/><br/>
+    <input type="submit" value="Log In!">
+  </form>
+</html>
