--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -5,7 +5,7 @@
   <p>{{error}}</p>
   <form method="GET" action="http://chalice.cloudapp.net:8111/groups/">
     Email: <input type="text" name="email"/><br/>
-    Username: <input type="text" name="email"/><br/>
+    Username: <input type="text" name="username"/><br/>
     <input type="submit" value="Log In!">
   </form>
 </html>
