--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -3,7 +3,7 @@
   	<p> Groupr is the best way to create and join Study Groups!</p>
 	<body>
 		<p> Signed in as {{user_email}}</p>
-		<form method="GET" action="http://chalice.cloudapp.net:8111/creategroup/">
+		<form method="GET" action="http://chalice.cloudapp.net:8111/gotocreategroup/">
 			<input type="submit" value="Create Your Own Group">
 		</form>
 		<form method="GET" action="http://chalice.cloudapp.net:8111/search/">
