cleaned up code

--- a/webserver/templates/creategroup.html
+++ b/webserver/templates/creategroup.html
@@ -2,6 +2,10 @@
   <body>
     <h1>Groupr</h1>
     <p> Groupr is the best way to create and join Study Groups!</p>
+    <button type="button">Home</button>
+    <button type="button">My Profile</button>
+    <button type="button">My Groups</button>
+    <button type="button">Sign Out</button>
     <form method="GET" action="http://chalice.cloudapp.net:8111/creategroup/">
       Group Name: <input type="text" name="groupname"/><br/>
       Description: <input type="text" name="description"/><br/>
