--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -3,7 +3,7 @@
     <h1>Groupr</h1>
     <p> Groupr is the best way to create and join Study Groups!</p>
 
-    <form method="GET" action="http://chalice.cloudapp.net:8111/signup/">
+    <form method="POST" action="http://chalice.cloudapp.net:8111/signup/">
       <p>{{invalid_email}}</p>
       Email: <input type="text" name="email"/><br/>
       Username: <input type="text" name="username"/><br/>
@@ -48,7 +48,7 @@
 
     </form>
     Already Have An Account?
-    <form method="GET" action="http://chalice.cloudapp.net:8111/getLogin/">
+    <form method="GET" action="http://chalice.cloudapp.net:8111/login/">
     <input type="submit" value="Log In"/>
     </form>
   </body>
