--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -3,7 +3,7 @@
   <p> Groupr is the best way to create and join Study Groups!</p>
   <h2>Login</h2>
   <p>{{error}}</p>
-  <form method="GET" action="http://chalice.cloudapp.net:8111/login/">
+  <form method="POST" action="http://chalice.cloudapp.net:8111/login/">
     Email: <input type="text" name="email"/><br/>
     Username: <input type="text" name="username"/><br/>
     <input type="submit" value="Log In!">
