--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -3,8 +3,8 @@
     <h1>Groupr</h1>
     <p> Groupr is the best way to create and join Study Groups!</p>
 
-    <form method="POST" action="http://chalice.cloudapp.net:8111/signup/">
-      <p>{{invalid_email}}</p>
+    <form method="POST" action="http://chalice.cloudapp.net:8111/">
+      <p>{{error}}</p>
       Email: <input type="text" name="email"/><br/>
       Username: <input type="text" name="username"/><br/>
       Gender: <select name="gender">
