--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -1,4 +1,7 @@
 <html>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <h1>Groupr</h1>
   <p> Groupr is the best way to create and join Study Groups!</p>
   <h2>Login</h2>
