--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -29,7 +29,7 @@
 			<input type="submit" value="Search"/></br>
 		</form>
 
-		<table style="width:100%">
+		<table style="width:100%" class="table table-hover">
 		{%for n in data%}
   		<tr>
     		<td>{{ n["group_name"] }} </td>
