--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -1,43 +1,31 @@
-<html>
-<html>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<h1>Groupr</h1>
-  	<p> Groupr is the best way to create and join Study Groups!</p>
-  	<form method= "GET" action="http://chalice.cloudapp.net:8111/navigate">
-  		<input type="submit" name="home" value="Home"/>
-  		<input type="submit" name="profile" value="Profile"/>
-  		<input type="submit" name="groups" value="Groups"/>
-  		<input type="submit" name="signout" value="Sign Out"/>
-  	</form>
-	<body>
-		<p> Signed in as {{user_email}}</p>
-		<form method="GET" action="http://chalice.cloudapp.net:8111/gotocreategroup/">
-			<input type="submit" value="Create Your Own Group">
-		</form>
-		<form method="GET" action="http://chalice.cloudapp.net:8111/search/">
-			<input type="text" name="query"/><br/>
-			<div class="onoffswitch">
-				Open Groups:
-    			<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-    				<label class="onoffswitch-label" for="myonoffswitch">
-        			<span class="onoffswitch-inner"></span>
-        			<span class="onoffswitch-switch"></span>
-    			</label>
-			</div>
-			<input type="submit" value="Search"/></br>
-		</form>
+{% extends "logged-in.html" %}
+{% block subtitle %}Welcome!{% endblock %}
 
-		<table style="width:100%" class="table table-hover">
-		{%for n in data%}
-  		<tr>
-    		<td>{{ n["group_name"] }} </td>
-    		<td>{{ n["description"] }}</td> 
-    		<td>{{ n["user_email"] }}</td> 
-    		<td>{{ n["status"] }}</td>
-  		</tr>
-  		{% endfor %}
- 		</table>
-	</body>
-</html>
+{% block content %}
+	<h1>Groupr</h1>
+	<p> Groupr is the best way to create and join Study Groups!</p>
+	<p> Signed in as {{user_email}}</p>
+	<form method="GET" action="http://chalice.cloudapp.net:8111/search/">
+		<input type="text" name="query"/><br/>
+		<div class="onoffswitch">
+			Open Groups:
+  			<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+  				<label class="onoffswitch-label" for="myonoffswitch">
+      			<span class="onoffswitch-inner"></span>
+      			<span class="onoffswitch-switch"></span>
+  			</label>
+		</div>
+		<input type="submit" value="Search"/></br>
+	</form>
+
+	<table style="width:100%" class="table table-hover">
+	{%for n in data%}
+		<tr>
+  		<td>{{ n["group_name"] }} </td>
+  		<td>{{ n["description"] }}</td> 
+  		<td>{{ n["user_email"] }}</td> 
+  		<td>{{ n["status"] }}</td>
+		</tr>
+		{% endfor %}
+		</table>
+{% endblock %}
