--- a/webserver/templates/login.html
+++ b/webserver/templates/login.html
@@ -1,42 +1,29 @@
-<html>
-  <style>
-  form, .alert-danger
-  {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50em;
-  }
-  label, input, select
-  {
-    margin-top: -7px;
-  }
-  .groupr-header {
-    margin-left: 20em;
-  }
-  div:empty {
-    display: none;
-  }
-  </style>
+{% extends "base.html" %}
+{% block title %}Log In{% endblock %}
 
-
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <div class="groupr-header">
-    <h1>Groupr</h1>
-    <p > Groupr is the best way to create and join Study Groups!</p>
-  </div class="groupr-header">
-  <div class="alert alert-danger">{{error}}</div>
-  <br>
-  <form method="POST" action="http://chalice.cloudapp.net:8111/login/">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputUsername1">Username</label>
-        <input name="username" type="username" class="form-control" id="exampleInputUsername1" placeholder="Username">
-      </div>
-    <input class="btn btn-default" type="submit" value="Log In!">
-  </form>
-</html>
+{% block body %}
+  <div class="container">
+    <h1 class="huge-header">Groupr</h1>
+    <script>
+      $('.huge-header').on('click', function () {
+        window.location.href = "{{ url_for('index')}}";
+      });
+    </script>
+    <p class="lead">Sign In</p>
+    {% if error %}
+      <div class="alert alert-danger alert-dismissable">{{error}}</div>
+    {% endif %}
+    <br>
+    <form method="POST" action="{{url_for('login')}}">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputUsername1">Username</label>
+          <input name="username" type="text" class="form-control" id="exampleInputUsername1" placeholder="Username">
+        </div>
+      <input class="btn btn-success btn-lg" type="submit" value="Log In!">
+    </form>
+  </div>  
+{% endblock %}
