--- a/webserver/templates/creategroup.html
+++ b/webserver/templates/creategroup.html
@@ -5,7 +5,7 @@
 
   
   <div class="well">
-    <form class="form-horizontal"  method="POST" action="{{ url_for('createGroup') }}">
+    <form class="form-horizontal" id="the-form" method="POST" action="{{ url_for('createGroup') }}">
       <fieldset>
         <legend>Create New Group</legend>
         <div class="form-group">
@@ -15,9 +15,9 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="inputPassword" class="col-lg-2 control-label">Size Limit:  </label>
+          <label class="col-lg-2 control-label">Size Limit (must be 2 or more):  </label>
           <div class="col-lg-10">
-            <input type="text" class="form-control" name="limit">
+            <input type="text" class="form-control" name="limit" id="limit">
             <div class="checkbox">
               <label>
                 <input type="checkbox" name="is-unlimited"> Check if Unlimited Number of Members!
@@ -44,7 +44,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="optionsRadios" id="optionsRadios2" value="closed">
-                Closed (group cannot be searched for, joining is invite by admin only)
+                Closed (group cannot be searched for)
               </label>
             </div>
           </div>
@@ -68,7 +68,7 @@
         </div>
         <div class="form-group">
           <div class="col-lg-10 col-lg-offset-2">
-            <input type="submit" class="btn btn-primary" value="Submit" />
+            <input id="submission" type="submit" class="btn btn-primary" value="Submit" />
           </div>
         </div>
       </fieldset>
@@ -80,6 +80,13 @@
       console.log('hello');
       $('#section').empty();
       $('#section').append('<option>' + $('#course').val() + '</option>');
+    });
+
+    $('#the-form').submit( function() {
+      if parseInt($('#limit').val()) < 2 {
+        alert('A group must have a minimum limit of 3 members!');
+        event.preventDefault();
+      }
     });
       
   </script>
