--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -25,8 +25,8 @@
         </div>
         <label >Gender</label>
         <select class="form-control" name="gender">
-          <option value="Female">Female</option>
-          <option value="Male">Male</option>
+          <option value="F">Female</option>
+          <option value="M">Male</option>
         </select></br>
         <div class="form-group">
           <label for="exampleInputMajor1">Major</label>
