--- a/webserver/templates/section.html
+++ b/webserver/templates/section.html
@@ -1,6 +1,15 @@
 {% extends "logged-in.html" %}
-{% block subtitle %}Sections{% endblock %}
+{% block subtitle %}Section{% endblock %}
 
 {% block content %}
-A section 
+<h2>Sections for {{course_title}}</h2>
+<br>
+<div class="list-group">
+	{% for item in groups %}
+	<a href="{{url_for('group', group_id=item.group_id)}}" class="list-group-item">
+		<h4 class="list-group-item-heading">Group Name: {{item.group_name}}</h4>
+		<p class="list-group-item-text">Admin: {{item.user_email}} <br> Description: {{item.description}}</p>
+	</a>
+	{% endfor %}
+</div>
 {% endblock %}
