--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -2,29 +2,31 @@
 {% block subtitle %}Welcome!{% endblock %}
 
 {% block content %}
-	<h1>Dashboard</h1>
-	<p class="lead"> Signed in as {{user_email}}</p>
-	<form method="GET" action="http://chalice.cloudapp.net:8111/search/">
-		<input type="text" name="query"/><br/>
-		<div class="onoffswitch">
-			Open Groups:
-  			<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-  				<label class="onoffswitch-label" for="myonoffswitch">
-      			<span class="onoffswitch-inner"></span>
-      			<span class="onoffswitch-switch"></span>
-  			</label>
-		</div>
-		<input type="submit" value="Search"/></br>
-	</form>
+<h1>Dashboard</h1>
+<p class="lead"> Signed in as {{user_email}}</p>
+<form method="GET" action="http://chalice.cloudapp.net:8111/search/">
+	<input type="text" name="query"/><br/>
+	<div class="onoffswitch">
+		Open Groups:
+		<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
+		<label class="onoffswitch-label" for="myonoffswitch">
+			<span class="onoffswitch-inner"></span>
+			<span class="onoffswitch-switch"></span>
+		</label>
+	</div>
+	<input type="submit" value="Search"/></br>
+</form>
+{% if data == [] %}
+<h3><em>No Results Found</em></h3>
+{% else %}
+<div class="list-group">
 
-	<table style="width:100%" class="table table-hover">
-	{%for n in data%}
-		<tr>
-  		<td>{{ n["group_name"] }} </td>
-  		<td>{{ n["description"] }}</td> 
-  		<td>{{ n["user_email"] }}</td> 
-  		<td>{{ n["status"] }}</td>
-		</tr>
-		{% endfor %}
-		</table>
+	{% for item in data %}
+	<a href="{{url_for('group', group_id=item.group_id)}}" class="list-group-item">
+		<h4 class="list-group-item-heading">{{ item["group_name"] }}</h4>
+		<p class="list-group-item-text">Admin: {{ item["user_email"] }} <br> Description: {{ item["description"] }} Status: {{ item["status"] }}</p>
+	</a>
+	{% endfor %}
+</div>
+{% endif %}
 {% endblock %}
